--- a/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/index.html
@@ -2,36 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Age calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Age calculator app</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
+  <div class="container">
+    <div class="date">
+      <div class="box">
+        <label for="day">DAY</label>
+        <input name="day" type="number" placeholder="DD">
+        <p class="error-empty-field">This field is required</p>
+      </div>
+      <div class="box">
+        <label for="month">MONTH</label>
+        <input name="month" type="number" placeholder="MM">
+        <p class="error-empty-field">This field is required</p>
+      </div>
+      <div class="box">
+        <label for="year">YEAR</label>
+        <input name="year" type="number" placeholder="YYYY">
+        <p class="error-empty-field">This field is required</p>
+      </div>
+    </div>
 
-  Day
-  DD
+    <div class="line">
+      <div class="circle"><img class="icon" src="assets/images/icon-arrow.svg" alt="Arrow"></div>
+        <!-- <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="46" height="44" viewBox="0 0 46 44"><g fill="none" stroke="#FFF" stroke-width="2"><path d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44"/></g></svg> -->
+      </img>
+    </div>
 
-  Month
-  MM
-
-  Year
-  YYYY
-
-  -- years
-  -- months
-  -- days
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div class="calculator">
+      <p><span>--</span>years</p>
+      <p><span>--</span>months</p>
+      <p><span>--</span>days</p>
+    </div>
   </div>
 </body>
 </html>
