--- a/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/index.html
@@ -13,17 +13,17 @@
       <div class="box">
         <label for="day">DAY</label>
         <input name="day" type="number" placeholder="DD">
-        <p class="error-empty-field">This field is required</p>
+        <p class="error-message">Must be a valid date</p>
       </div>
       <div class="box">
         <label for="month">MONTH</label>
         <input name="month" type="number" placeholder="MM">
-        <p class="error-empty-field">This field is required</p>
+        <p class="error-message">Must be a valid date</p>
       </div>
       <div class="box">
         <label for="year">YEAR</label>
         <input name="year" type="number" placeholder="YYYY">
-        <p class="error-empty-field">This field is required</p>
+        <p class="error-message">Must be a valid date</p>
       </div>
     </div>
 
