--- a/intro-section-with-dropdown-navigation-main/index.html
+++ b/intro-section-with-dropdown-navigation-main/index.html
@@ -11,6 +11,7 @@
   <header>
       <div class="wrap">
         <div class="logo"><img src="images/logo.svg" alt="logo snap"></div>
+        <img class="menu-icon" src="images/icon-menu.svg" alt="">
         <ul class="nav">
           <li class="nav-item">Features</li>
           <li class="nav-item">Company</li>
@@ -26,7 +27,7 @@
   
   <main>
     <div class="information-container">
-      <h1>  Make <br> remote work</h1>
+      <h1>  Make remote work</h1>
       <p class="text">Get your team in sync, no matter your location. Streamline processes, 
         create team rituals, and watch productivity soar.</p>
       <button class="btn btn-fill">Learn more</button>
