--- a/intro-section-with-dropdown-navigation-main/index.html
+++ b/intro-section-with-dropdown-navigation-main/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
   <header>
-      <div class="wrap">
+      <div class="wrap ">
         <div class="logo"><img src="images/logo.svg" alt="logo snap"></div>
         <img class="menu-icon" src="images/icon-menu.svg" alt="">
+        <img class="menu-icon-close" src="images/icon-close-menu.svg" alt="">
+        <div class="modal "></div>
         <ul class="nav">
           <li class="nav-item">
             <div class="features">
@@ -34,7 +36,20 @@
                 </div>
               </ul>
             </div>Features</li>
-          <li class="nav-item">Company</li>
+          <li class="nav-item">
+            <div class="features active">
+              <ul>
+                <div class="feature-wrapper">
+                 <li class="feature-item">History</li>
+                </div>
+                <div class="feature-wrapper">
+                  <li class="feature-item">Our Team</li>
+                </div>
+                <div class="feature-wrapper">
+                  <li class="feature-item">Blog</li>
+                </div>
+              </ul>
+            </div>Company</li>
           <li class="nav-item">Careers</li>
           <li class="nav-item">About</li>
         </ul>
@@ -47,7 +62,7 @@
   
   <main>
     <div class="information-container">
-      <h1>  Make remote work</h1>
+      <h1>Make remote work</h1>
       <p class="text">Get your team in sync, no matter your location. Streamline processes, 
         create team rituals, and watch productivity soar.</p>
       <button class="btn btn-fill">Learn more</button>
