--- a/intro-section-with-dropdown-navigation-main/index.html
+++ b/intro-section-with-dropdown-navigation-main/index.html
@@ -16,6 +16,9 @@
         <div class="modal "></div>
         <ul class="nav">
           <li class="nav-item">
+            Features 
+            <img class="down" src="images/icon-arrow-down.svg" alt="">
+            <img class="up" src="images/icon-arrow-up.svg" alt=""> 
             <div class="features">
               <ul>
                 <div class="feature-wrapper">
@@ -35,21 +38,23 @@
                   <li class="feature-item">Planning</li>
                 </div>
               </ul>
-            </div>Features</li>
-          <li class="nav-item">
-            <div class="features active">
-              <ul>
-                <div class="feature-wrapper">
-                 <li class="feature-item">History</li>
-                </div>
-                <div class="feature-wrapper">
-                  <li class="feature-item">Our Team</li>
-                </div>
-                <div class="feature-wrapper">
-                  <li class="feature-item">Blog</li>
-                </div>
-              </ul>
-            </div>Company</li>
+            </div></li>
+          <li class="nav-item">Company 
+            <img class="down" src="images/icon-arrow-down.svg" alt="">
+            <img class="up" src="images/icon-arrow-up.svg" alt=""> 
+            <div class="features features-update">
+            <ul>
+              <div class="feature-wrapper">
+               <li class="feature-item">History</li>
+              </div>
+              <div class="feature-wrapper">
+                <li class="feature-item">Our Team</li>
+              </div>
+              <div class="feature-wrapper">
+                <li class="feature-item">Blog</li>
+              </div>
+            </ul>
+          </div></li>
           <li class="nav-item">Careers</li>
           <li class="nav-item">About</li>
         </ul>
